Resolves: tdf#154715 don't use last-used field setting when editing field

If we are inserting a field it makes sense to use the last-used
settings, but if we are editing an existing field we naturally want to
populate with the current field.

Here we have IsRefresh used twice as a condition, one inside the other.
But if was true in the outer use, it will also be true in the inner
(this duplication exists all the way back to the initial commit) because
GetUserData() has no side effect.

IsRefresh is only true during EditNewField (which is the case of using
the "next/back" button to go to edit another field). So even before this
change if you click next and then back (assuming there is another field
to move to) then you then get the right results

Skip restoring the last-used settings in the EditField case, replace
the outer !IsRefresh() with !IsFieldEdit()

Change-Id: I4224302171d2e8d02a0f1e0efc9fdada5ada9d7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165876
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit db609a58df7be082de7d5a20a2a924789d6a64a1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165840
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>